--- a/2nfm/package.json
+++ b/2nfm/package.json
@@ -13,7 +13,8 @@
     "socket.io-client": "2.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "webrtc-adapter": "^7.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
