--- a/2nfm/package.json
+++ b/2nfm/package.json
@@ -11,7 +11,7 @@
     "core-js": "^2.6.5",
     "rtcmulticonnection": "^3.6.9",
     "socket.io-client": "2.1.0",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1",
     "webrtc-adapter": "^7.3.0"
@@ -31,7 +31,8 @@
     "prettier": "^1.18.2",
     "sass-loader": "^7.0.0",
     "vue-cli-plugin-pug": "^1.0.7",
-    "vue-template-compiler": "^2.6.10"
+    "vue-svg-loader": "^0.15.0",
+    "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
