--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,21 @@
-# Node
-node_modules
-
-# bower
-bower_components
 .DS_Store
-.zip
-.tar
-*/*.zip
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
