--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/cli-service": "^3.11.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-vue": "^6.1.2",
     "frow": "^3.3.1",
     "lint-staged": "^8.1.5",
