--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install -g yarn
     - run: yarn
+    - run: git config --global user.email "actions@codysherman.com"
+    - run: git config --global user.name "GitHub Actions"
     - run: ./deploy.sh
