--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^2.6.5",
+    "core-js": "^3.6.4",
     "rtcmulticonnection": "^3.6.9",
-    "socket.io-client": "2.1.0",
+    "socket.io-client": "2.3.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.0.3",
+    "vue-router": "^3.1.5",
     "vuex": "^3.0.1",
     "webrtc-adapter": "^7.3.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
+    "@vue/cli-plugin-babel": "^4.2.2",
+    "@vue/cli-plugin-eslint": "^4.2.2",
+    "@vue/cli-service": "^4.2.2",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-vue": "^6.1.2",
     "frow": "^3.3.1",
-    "lint-staged": "^8.1.5",
-    "node-sass": "^4.13.0",
-    "sass-loader": "^7.0.0",
+    "lint-staged": "^10.0.7",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
     "source-map": "^0.7.3",
     "vue-cli-plugin-pug": "^1.0.7",
     "vue-svg-loader": "^0.15.0",
@@ -39,8 +39,7 @@
   },
   "lint-staged": {
     "*.{js,vue}": [
-      "vue-cli-service lint",
-      "git add"
+      "vue-cli-service lint"
     ]
   }
 }
