--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-vue": "^6.1.2",
     "lint-staged": "^10.0.7",
-    "node-sass": "^4.13.1",
+    "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "source-map": "^0.7.3",
     "vue-cli-plugin-pug": "^1.0.7",
