--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,12 +25,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install -g yarn
     - run: yarn
-    - run: git config --global user.email "actions@codysherman.com"
+    - run: git config --global user.email "cody@codysherman.com"
     - run: git config --global user.name "GitHub Actions"
-    - run: ./deploy.sh ${{ secrets.GITHUB_TOKEN }} ${{ github.repository }}
-    - run: >-
-           curl -L -X POST -w '%{http_code}\n'
-           -H "Content-Type: application/json"
-           -H "Authorization: token ${{ secrets.DEPLOY_KEY }}"
-           "https://api.github.com/repos/${{ github.repository }}/pages/builds"
-           | tail -1 | grep 201
+    - run: echo "${{ secrets.DEPLOY_KEY }}" > ~/deploy_key
+    - run: GIT_SSH_COMMAND='ssh -i ~/deploy_key' ./deploy.sh
