--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install -g yarn
     - run: yarn
-    - run: git config --global user.email "cody@codysherman.com"
-    - run: git config --global user.name "GitHub Actions"
-    - run: echo "${{ secrets.DEPLOY_KEY }}" > ~/deploy_key
-    - run: chmod 600 ~/deploy_key
-    - run: cat ~/deploy_key
-    - run: GIT_SSH_COMMAND='ssh -i ~/deploy_key' ./deploy.sh
+    - name: Configuring git
+      run: git config --global user.email "cody@codysherman.com" && git config --global user.name "GitHub Actions"
+    - name: Configuring ssh
+      run: echo "${{ secrets.DEPLOY_KEY }}" > ~/deploy_key && chmod 600 ~/deploy_key
+    - name: Building and Deploying
+      run: GIT_SSH_COMMAND='ssh -i ~/deploy_key' ./deploy.sh
