add TURN credentials to GitHub actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install -g yarn
     - run: yarn
+    - name: Add TURN server username
+      run: echo "VUE_APP_TURN_USERNAME = ${{ secrets.TURN_USERNAME }}" >> .env
+    - name: Add TURN server credential
+      run: echo "VUE_APP_TURN_CREDENTIAL = ${{ secrets.TURN_CREDENTIAL }}" >> .env
     - name: Configuring git
       run: git config --global user.email "cody@codysherman.com" && git config --global user.name "GitHub Actions"
     - name: Configuring ssh
