add new yarn 2.0 gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,13 @@
 node_modules
 /dist
 
-
+# yarn
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
 
 # local env files
 .env.local
