add missing package

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.2.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-vue": "^6.2.2",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
@@ -30,6 +30,7 @@
     "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
     "source-map": "^0.7.3",
+    "supports-color": "^7.2.0",
     "vue-cli-plugin-pug": "^1.0.7",
     "vue-eslint-parser": "^7.1.0",
     "vue-svg-loader": "^0.16.0",
