--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/cli-service": "^4.4.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.0.0",
+    "eslint-config-begin": "^0.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-vue": "^7.0.1",
